# ChangeLog for net-firewall/shorewall
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall/ChangeLog,v 1.119 2006/10/23 15:57:02 gustavoz Exp $

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  shorewall-3.0.8.ebuild:
  Stable on hppa

  22 Oct 2006; Markus Rothe <corsair@gentoo.org> shorewall-3.2.4.ebuild:
  Added ~ppc64; bug #151952

  21 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> shorewall-3.0.8.ebuild,
  shorewall-3.2.4.ebuild:
  Bump stable and add back ~alpha keyword, bug 151952.

  19 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  shorewall-3.2.4.ebuild:
  Back to ~sparc and ~hppa wrt #151952

  09 Oct 2006; Markus Ullmann <jokey@gentoo.org> shorewall-3.2.4.ebuild:
  Updating info wrt bug #150525

*shorewall-3.2.4 (08 Oct 2006)
*shorewall-3.0.9 (08 Oct 2006)

  08 Oct 2006; Markus Ullmann <jokey@gentoo.org> -shorewall-3.0.5-r1.ebuild,
  -shorewall-3.0.7.ebuild, +shorewall-3.0.9.ebuild, +shorewall-3.2.4.ebuild:
  Version bump and cleanup

  29 Sep 2006; Markus Rothe <corsair@gentoo.org> shorewall-3.0.8.ebuild:
  Stable on ppc64

  24 Sep 2006; Michael Hanselmann <hansmi@gentoo.org>
  shorewall-3.0.8.ebuild:
  Stable on ppc.

  18 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  shorewall-3.0.8.ebuild:
  Stable on sparc

  18 Sep 2006; <ticho@gentoo.org> shorewall-3.0.8.ebuild:
  Stable on x86.

*shorewall-3.2.3 (18 Sep 2006)

  18 Sep 2006; Benjamin Smee <strerror@gentoo.org> +files/shorewall-r2,
  +shorewall-3.2.3.ebuild:
  Major version bump. Thanks to vieri. Bug #140001

*shorewall-3.0.8 (11 Jul 2006)

  11 Jul 2006; <ticho@gentoo.org> +shorewall-3.0.8.ebuild:
  Version bump. Bug #112942. Thanks to Vieri <rentorbuy at yahoo.com>

  30 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  shorewall-3.0.6.ebuild:
  Stable on hppa and sparc

  30 May 2006; Markus Rothe <corsair@gentoo.org> shorewall-3.0.6.ebuild:
  Stable on ppc64
